--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.18.0",
