--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.18.0",
