--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.1.1",
     "aos": "^2.3.4",
+    "bootstrap": "^5.3.3",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
+    "react-bootstrap": "^2.10.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.1.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-tooltip": "^5.26.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
