--- a/src/JSON/Projects.json
+++ b/src/JSON/Projects.json
@@ -4,7 +4,7 @@
       "Python": "Python",
       "ML": "ML",
       "img": "https://i.imgur.com/5GamJ5U.jpg",
-      "review": "Utilizing Machine Learning to Detect Eye Openness/Closure from EEG Data. Research Paper accepted at Scopus.",
+      "review": "Utilizing Machine Learning to Detect Eye Openness/Closure from EEG Data. Research Paper has been presented.",
       "link": "https://github.com/007-Shivam/Eye_State_Prediction"
     },
     {
@@ -16,6 +16,23 @@
       "review": "BVPDET ACM Students Chapter website: Fostering community, advancing computing knowledge.",
       "link": "https://github.com/BVDUDET-ACM-Student-Chapter/BVDUDET-ACM-Website",
       "website": "https://bvdudet-acm-website-000.web.app/"
+    },
+    {
+      "name": "Waste Classification using VGG-16",
+      "ML": "DL",
+      "Python": "Python",
+      "img": "https://i.imgur.com/GFW8DmM.png",
+      "review": "CNN architecture to classify waste into two categories: recycle waste and organic waste.",
+      "link": "https://github.com/007-Shivam/Waste-Classification-using-VGG16"
+    },
+    {
+      "name": "Samarth Properties & Tourism",
+      "ReactJS": "ReactJS",
+      "CSS": "Css",
+      "img": "https://i.imgur.com/MfywirX.jpg",
+      "review": "Discover your dream home with our user-friendly React-powered real estate website.",
+      "link": "https://github.com/007-Shivam/Samarth_Properties_and_Tourism",
+      "website": "https://samarth-properties-and-tourism.web.app/"
     },
     {
       "name": "Sanket",
