--- a/package.json
+++ b/package.json
@@ -1,56 +1,36 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
+  "name": "portfolio_v2",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@vercel/analytics": "^1.1.1",
-    "aos": "^2.3.4",
-    "bootstrap": "^5.3.3",
-    "mdb-react-ui-kit": "^6.3.0",
-    "react": "^18.2.0",
-    "react-animated-cursor": "^2.11.2",
-    "react-bootstrap": "^2.10.1",
-    "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
-    "react-github-calendar": "^4.1.2",
-    "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.18.0",
-    "react-scripts": "^5.0.1",
-    "react-simple-typewriter": "^5.0.1",
-    "react-slick": "^0.29.0",
-    "react-tooltip": "^5.26.3",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "animated-backgrounds": "^2.0.0",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.5",
+    "react-simple-typewriter": "^5.0.1",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "tailwindcss": "^3.3.5"
+    "@eslint/js": "^9.36.0",
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.4",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.22",
+    "globals": "^16.4.0",
+    "vite": "^7.1.7"
   }
 }
