--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@vercel/analytics": "^1.5.0",
     "animated-backgrounds": "^2.0.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-github-calendar": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "react-simple-typewriter": "^5.0.1",
+    "react-tooltip": "^5.30.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
